# Personalized-Learning-Finder

./: .gitignore  CMakeLists.txt  README.md  main.c
database/: create_quarry.sql  database.sqbpro  db.c  drop_quarry.sql  insert data.sql  retrive.sql  test.sql
notes/: How print colored text.md  function to use.md  note.txt
src/app/: admin.c  admin.h  course_recommendation.c
src/db_handle/: create_tables.c  dbcon.c  fake_data.c  handle_tables.c  inseart.c  retrieve.c
src/filehandel/: errrorlog.c
src/header/: admin.h  color.h  course_recommendation.h  courses.c.h  courses.h  create_tables.h  db.h  dbcon.h  errrorlog.h  fake_data.h  handle_tables.h  input.h  inseart.h  main.h  output.h  passion.h  retrieve.h  skill.h  sqlite3.h  user.h
src/input/: Input.c  courses.c  passion.c  skill.c  user.c
src/output/: output.c
